// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assign pkg config should merge properties deeply 1`] = `
{
  "runtime": {
    "router": true,
    "state": true,
  },
}
`;

exports[`assign pkg config should preserve symbol of plugins 1`] = `
{
  "plugins": [
    {
      Symbol(test): "test",
    },
  ],
  "runtime": {
    "router": true,
  },
}
`;
